<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="5"
    tools:context="com.iloveallah.itsharks.ui.AddReviewFragment">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/your_name"
        android:hint="@string/Yourname"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_marginTop="20sp"
        android:layout_weight="1" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/course_name"
        android:hint="@string/Coursename"
        android:gravity="center"
        android:textSize="30sp"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_marginTop="20sp"
        android:layout_weight="1"

        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/your_review"
        android:hint="@string/YourReview"
        android:gravity="center"
        android:textSize="30sp"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_marginTop="20sp"
        android:layout_weight="2"

        />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add"
        android:layout_width="80sp"
        android:layout_height="80sp"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:onClick="button"
        android:src="@drawable/fab_add"
        android:contentDescription="@string/add_review"
        app:backgroundTint="@color/pink"
        app:borderWidth="0dp"
        app:elevation="6dp"
        app:fabSize="normal"
        app:pressedTranslationZ="12dp"

        />
</LinearLayout>
