<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/th2"

    >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.iloveallah.itsharks.contact">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/address"
            android:textColorHint="@color/white"
            android:textSize="35sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address_value"
            android:textColorHint="@color/white"

            android:textSize="25sp"
            android:gravity="center_vertical"
            android:layout_marginTop="15sp"
            android:layout_marginBottom="15sp"
            android:id="@+id/address" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/mobile"
            android:textColorHint="@color/white"

            android:textSize="35sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/mobile"
                android:layout_width="0dp"
                android:layout_height="50sp"

                android:layout_marginBottom="15sp"
                android:layout_marginTop="15sp"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <Button
                android:layout_width="60sp"
                android:layout_height="60sp"
                android:id="@+id/phone"
                android:background="@drawable/telephone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="50sp"
                android:textColor="@color/white"

                android:textSize="25sp"
                android:gravity="center_vertical"
                android:layout_marginTop="15sp"
                android:layout_marginBottom="15sp"
                android:layout_weight="3"
                android:id="@+id/mobile2" />

            <Button
                android:layout_width="60sp"
                android:layout_height="60sp"
                android:id="@+id/phone2"
                android:background="@drawable/telephone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/mobile3"
                android:layout_width="0dp"

                android:layout_height="50sp"
                android:layout_marginBottom="15sp"
                android:layout_marginTop="15sp"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <Button
                android:layout_width="60sp"
                android:layout_height="60sp"
                android:id="@+id/phone3"
                android:background="@drawable/telephone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="70sp"
                android:layout_height="70sp"
                android:id="@+id/face"
                android:contentDescription="@string/face"
                android:layout_marginRight="50sp"
                android:layout_gravity="center"
                android:layout_marginLeft="100sp"
                android:background="@drawable/face" />

            <ImageButton
                android:layout_width="70sp"
                android:layout_height="70sp"
                android:id="@+id/google"
                android:contentDescription="@string/google"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/google" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>