<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20sp"
    android:layout_marginRight="20sp"
    android:layout_marginLeft="20sp">
    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:orientation="horizontal"-->
    <!--android:weightSum="2"-->
    <!--&gt;-->
    <android.support.v7.widget.CardView
        tools:style="@style/CardView"
        android:id="@+id/card_view"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorPrimary"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="5dp"
        card_view:cardUseCompatPadding="true"
        card_view:cardMaxElevation="1dp"
        card_view:cardPreventCornerOverlap="false"

        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/name"
            android:hint="@string/Name"
            android:textSize="25sp"
            android:textColorHint="@color/white"
            android:padding="10sp"
            android:textColor="@color/white" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="studied"
            android:textSize="10sp"
            android:textColorHint="@color/white"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/course"
            android:hint="@string/course"
            android:layout_weight="1"
            android:textSize="25sp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:padding="10sp"

            />







        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:id="@+id/review"
            android:hint="@string/review"
            android:layout_weight="1"
            android:textSize="20sp"
            android:padding="10sp"
            android:textColorHint="@color/white"
            android:textColor="@color/white" />
    </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>