<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    tools:context="com.iloveallah.itsharks.ui.InfoFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    app:cardBackgroundColor="@color/white"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"

    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    card_view:cardCornerRadius="10dp"
    card_view:cardElevation="5dp"
    card_view:cardUseCompatPadding="true"
    card_view:cardMaxElevation="1dp"
    card_view:cardPreventCornerOverlap="false"
    >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            android:weightSum="3">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="60sp"
                android:layout_weight="2"
                android:textSize="15sp"
                android:hint="@string/Coursename"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:gravity="center_vertical"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="60sp"
                android:layout_weight="1"
                android:id="@+id/course_name"
                android:textSize="15sp"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:layout_marginLeft="15dp"
                android:gravity="center"

                />

        </LinearLayout>
</android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="@color/white"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"

            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            card_view:cardCornerRadius="10dp"
            card_view:cardElevation="5dp"
            card_view:cardUseCompatPadding="true"
            card_view:cardMaxElevation="1dp"
            card_view:cardPreventCornerOverlap="false"
            >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:weightSum="3"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="60sp"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:gravity="center_vertical"

                android:layout_weight="2"
                android:textSize="15sp"
                android:hint="@string/courseHours"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="60sp"
                android:id="@+id/course_hours"
                android:layout_gravity="center"
                android:textSize="15sp"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:layout_marginLeft="15dp"
                android:gravity="center"


                />

        </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="@color/white"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            card_view:cardCornerRadius="10dp"
            card_view:cardElevation="5dp"
            card_view:cardUseCompatPadding="true"
            card_view:cardMaxElevation="1dp"
            card_view:cardPreventCornerOverlap="false"
            >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:weightSum="3"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="60sp"
                android:textColorHint="@color/black"
                android:textColor="@color/black"

                android:layout_weight="2"
                android:gravity="center_vertical"

                android:textSize="15sp"
                android:hint="@string/courseWeeks"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="60sp"
                android:id="@+id/course_weeks"
                android:textSize="15sp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:layout_marginLeft="15dp"


                />
        </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            app:cardBackgroundColor="@color/white"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            card_view:cardCornerRadius="10dp"
            card_view:cardElevation="5dp"
            card_view:cardUseCompatPadding="true"
            card_view:cardMaxElevation="1dp"
            card_view:cardPreventCornerOverlap="false"
            >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:weightSum="3"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="60sp"
                android:layout_weight="2"
                android:textSize="15sp"
                android:hint="@string/sessionsPerWeek"
                android:textColorHint="@color/black"
                android:gravity="center_vertical"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="60sp"
                android:id="@+id/sessions"
                android:layout_weight="1"
                android:textSize="15sp"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:layout_marginLeft="15dp"
                android:gravity="center"


                />
        </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</LinearLayout>
